Ability to mark a book as finished and unit test

--- a/libs/books/feature/src/lib/reading-list/reading-list.component.scss
+++ b/libs/books/feature/src/lib/reading-list/reading-list.component.scss
@@ -40,6 +40,12 @@
   white-space: nowrap;
 }
 
+.reading-list-item--details--finishedDate{
+  font-size: 14px;
+  color: brown;
+  font-weight: bold;
+}
+
 .empty {
   font-weight: 100;
   font-size: 1rem;
