--- a/libs/books/feature/src/lib/book-search/book-search.component.html
+++ b/libs/books/feature/src/lib/book-search/book-search.component.html
@@ -4,6 +4,7 @@
       autoFocus
       matInput
       type="search"
+      data-e2e="input-field"
       placeholder="Search for books to add to your reading list"
       formControlName="term"
       aria-label="search input"
