Undo add and remove book from reading list

--- a/libs/books/feature/src/lib/book-search/book-search.component.html
+++ b/libs/books/feature/src/lib/book-search/book-search.component.html
@@ -42,6 +42,7 @@
             <button
               mat-flat-button
               color="primary"
+              data-e2e="add-button"
               [attr.aria-label]="'Add button'"
               (click)="addBookToReadingList(b)"
               [disabled]="b.isAdded"
