Ability to mark a book as finished and unit test

--- a/libs/books/feature/src/lib/reading-list/reading-list.component.html
+++ b/libs/books/feature/src/lib/reading-list/reading-list.component.html
@@ -27,6 +27,7 @@
       <button
         data-testing = "finishBookButton"
         mat-icon-button
+        data-e2e="finish-icon"
         (click)="finishBookFromReadingList(b)"
         [disabled]= "b.finished"
       ><mat-icon [ngStyle]="b.finished ? {'color':'green'}: ''">check_circle_outline</mat-icon>
